fix #20 add ability to specify the sheet name with every request
