# server/api/controllers/sheets/controller.ts
@@ -3,23 +3,26 @@ import { Request, Response } from 'express';
 
 type createBody = {
   title: string;
-  expense: number;
+  expense: string;
+  resSheetName?: string;
 };
 
 type patchBody = {
   id: number;
   title?: string;
-  expense?: number;
+  expense?: string;
+  resSheetName?: string;
 };
 
 type deleteBody = {
   id: number;
+  resSheetName?: string;
 };
 
 export class Controller {
   create(req: Request, res: Response): void {
-    const { title, expense }: createBody = req.body;
-    SheetsService.create(req.params['sheetId'], title, expense)
+    const { title, expense, resSheetName }: createBody = req.body;
+    SheetsService.create(req.params['sheetId'], title, expense, resSheetName)
       .then((r) => {
         if (r.result !== '') res.status(201).send(r);
         else res.status(404).send(r);
@@ -30,13 +33,8 @@ export class Controller {
   }
 
   patch(req: Request, res: Response): void {
-    const body: patchBody = req.body;
-    SheetsService.patch(
-      req.params['sheetId'],
-      body.id,
-      body.title,
-      body.expense
-    )
+    const { id, title, expense, resSheetName }: patchBody = req.body;
+    SheetsService.patch(req.params['sheetId'], id, title, expense, resSheetName)
       .then((r) => {
         if (r.result !== '') res.status(200).send(r);
         else res.status(404).send(r);
@@ -47,8 +45,8 @@ export class Controller {
   }
 
   delete(req: Request, res: Response): void {
-    const { id }: deleteBody = req.body;
-    SheetsService.delete(req.params['sheetId'], id)
+    const { id, resSheetName }: deleteBody = req.body;
+    SheetsService.delete(req.params['sheetId'], id, resSheetName)
       .then((r) => {
         if (r.result !== '') res.status(200).send(r);
         else res.status(404).send(r);
